fix: fix overflow

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -13,6 +13,7 @@ html {
 
 body {
     background: url('../assets/img/bg.png') repeat;
+    overflow: hidden;
 }
 
 .container{
